--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 </head>
-<body>
+<body style="background-color: #f3f1ff;">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #562eff;">
             <div class="container">
@@ -39,7 +39,72 @@
           </nav>
     </header>
     <main>
-
+        <section class="container bg-white rounded">
+            <div>
+                <h4  style="color: #562eff;" class="my-5">Top Players</h4>
+                <div class="row gy-4 pb-4">
+                    <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center">
+                        <img src="images/players/player-1.png" alt="" width="56px">
+                        <h4 class="ms-3">John Smith</h4>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center">
+                        <img src="images/players/player-2.png" alt="" width="56px">
+                        <h4 class="ms-3">John Smith</h4>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center">
+                        <img src="images/players/player-3.png" alt="" width="56px">
+                        <h4 class="ms-3">John Smith</h4>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center">
+                        <img src="images/players/player-4.png" alt="" width="56px">
+                        <h4 class="ms-3">John Smith</h4>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center">
+                        <img src="images/players/player-5.png" alt="" width="56px">
+                        <h4 class="ms-3">John Smith</h4>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 d-flex align-items-center">
+                        <img src="images/players/player-6.png" alt="" width="56px">
+                        <h4 class="ms-3">John Smith</h4>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div>
+                <h4  style="color: #562eff;" class="my-5">Top Blogs</h4>
+                <div class="row g-4">
+                    <div class="col-lg-6  d-flex">
+                        <img src="images/blogs/blog-1.png" alt="" width="177px">
+                       <div class="ps-2">
+                        <h4>13 of my Favourite UI/UX Goodies</h4>
+                        <p>By <a href="">Danny Sapio</a></p>
+                       </div>
+                    </div>
+                    <div class=" col-lg-6  d-flex">
+                        <img src="images/blogs/blog-2.png" alt="" width="177px">
+                        <div class="ps-2">
+                            <h4>13 of my Favourite UI/UX Goodies</h4>
+                            <p>By <a href="">Danny Sapio</a></p>
+                           </div>
+                    </div>
+                    <div class=" col-lg-6  d-flex">
+                        <img src="images/blogs/blog-3.png" alt="" width="177px">
+                        <div class="ps-2">
+                            <h4>13 of my Favourite UI/UX Goodies</h4>
+                            <p>By <a href="">Danny Sapio</a></p>
+                           </div>
+                    </div>
+                    <div class="col-lg-6  d-flex">
+                        <img src="images/blogs/blog-4.png" alt="" width="177px">
+                        <div class="ps-s">
+                            <h4>13 of my Favourite UI/UX Goodies</h4>
+                            <p>By <a href="">Danny Sapio</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+      
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
